# Portfolio

./: .gitignore
Big Data/: atividade2.docx
Rust Projects/webproject2/: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  docker.sh  git_memo.txt  links.txt  log4rs.yaml
Rust Projects/webproject2/blockchain/ethereum/: package-lock.json  package.json
Rust Projects/webproject2/migrations/: eth_example_accounts.txt  struct_examples.txt  tutorial.md  user_database_example.txt
Rust Projects/webproject2/migrations/daily/: snapshot_donations_20250214_155401.json
Rust Projects/webproject2/migrations/example_profile_images/: brasaodearmas.txt  fernandoulrich.txt  fireship.txt  flowgames.txt  gigatongames.txt
Rust Projects/webproject2/migrations/examples/: donations_example.json  trending.json  users_example.json
Rust Projects/webproject2/migrations/snapshots/: snapshot_donations_20250215_125516.json  snapshot_donations_20250215_125931.json  snapshot_donations_20250215_130015.json  snapshot_donations_20250215_130437.json  snapshot_donations_20250215_131209.json  snapshot_donations_20250215_131956.json  snapshot_donations_20250215_132223.json  snapshot_donations_20250215_132548.json  snapshot_donations_20250215_132806.json  (+7 more)
Rust Projects/webproject2/src/: config.rs  error.rs  logger.rs  main.rs  state.rs
Rust Projects/webproject2/static/: styles.css
Rust Projects/webproject2/templates/: about.html.tera  base.html.tera  create.html.tera  d.html.tera  error.html.tera  index.html.tera  search.html.tera  t.html.tera  terms.html.tera  u.html.tera
(+2751 files in other folders)
