[package]
name = "webproject2"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "tls", "json"] } 
rocket_dyn_templates = { version = "0.1", features = ["tera"] } # Templating engine
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
once_cell = "1.19"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
fern = { version = "0.6", features = ["colored"] }
